--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.1"
+    "@types/react-beautiful-dnd": "^13.1.1",
+    "prettier": "2.3.2"
   }
 }
